Fixed header spacings and nav bar. CHanged up fonts

--- a/resurse/scss/customize_bootstrap.scss
+++ b/resurse/scss/customize_bootstrap.scss
@@ -221,3 +221,11 @@ button{
 // input[type="range"]{
 
 // }
+
+ul{
+    padding: 0px !important;
+}
+
+h1{
+    font: "Times New Roman";
+}
